--- a/2014-09-12.helios.md
+++ b/2014-09-12.helios.md
@@ -1,11 +1,11 @@
-[2014-09-12] : delivery
+###[2014-09-12] : delivery
 ---
     project@gitolite:helios-ames-2014 HELIOS-RCAS-2014-09-12
     helios.ames:{201402,/u/archive/2014-09-12}/
 
-[2014-09-12] : TODO
+###[2014-09-12] : TODO
 ---
-### subprocess fork() vs. os.system()
+### subprocess fork() vs. os.system() :
     - [google](https://www.google.com/#q=python+mpi+fork+subprocess)
     - [python doc](https://docs.python.org/2/library/subprocess.html#replacing-os-system)
     - [tempfile](https://docs.python.org/2/library/tempfile.html#tempfile.mkstemp)
