--- a/2014-09-12.helios.md
+++ b/2014-09-12.helios.md
@@ -7,7 +7,7 @@
 ---
 ### subprocess fork() vs. os.system() :
   - [google](https://www.google.com/#q=python+mpi+fork+subprocess)
-  - [python doc](https://docs.python.org/2/library/subprocess.html#replacing-os-system)
+  - [subprocess](https://docs.python.org/2/library/subprocess.html#replacing-os-system)
   - [tempfile](https://docs.python.org/2/library/tempfile.html#tempfile.mkstemp)
   - [ParallelProcessing](https://wiki.python.org/moin/ParallelProcessing)
   - [StackOverflow](http://stackoverflow.com/questions/21090085/calling-mpi-binary-in-serial-as-subprocess-of-mpi-application)
